Fixes image stretching issue when viewing story images on mobile

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -490,10 +490,21 @@ footer {
 }
 
 .storyImage {
-  width: 65%;
   margin-bottom: 1.5%;
   display: flex;
   justify-content: center;
+}
+
+@media (max-width: 700px) {
+  .storyImage {
+    width: 250px;
+  }
+}
+
+@media (max-width: 450px) {
+  .storyImage {
+    width: 200px;
+  }
 }
 
 /* Contact.js */
